--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,12 +9,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - name: Run a one-line script
-      run: echo Hello, world!
-    - name: Run a multi-line script
-      run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
-    - uses: mavrosxristoforos/jxb@14078631438eb70982d7cef986b024885dd562d5
+    - uses: mavrosxristoforos/jxb@master
       with:
         build-file: 'build-ns.jxb'
