--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,8 +9,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-      with:
-        fetch-depth: 1
+      #with:
+      #  fetch-depth: 1
     - uses: mavrosxristoforos/jxb@master
       with:
         build-file: 'build-ns.jxb'
