--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,14 +19,16 @@ jobs:
       uses: mavrosxristoforos/jxb@1.0
       with:
         build-file: 'build_ns.jxb'
-    #- name: Get XML
-    #  id: getxml
-    #  uses: mavrosxristoforos/get-xml-info
-    #  
+    - name: Get XML
+      id: getxml
+      uses: mavrosxristoforos/get-xml-info@1.0
+      with:
+        xml-file: 'pkg_ns.xml'
+        xpath: '//version'
     - name: Create Release
       uses: ncipollo/release-action@v1
       with:
         artifacts: 'pkg_ns.zip'
         token: ${{ secrets.GITHUB_TOKEN }}
-        tag: '1.5.45'
-        #tag: steps.getxml.outputs.version
+        #tag: '1.5.45'
+        tag: steps.getxml.outputs.info
