--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: CD
 on:
   push:
     paths-ignore:
-    - '.github/**'
+    #- '.github/**'
     - '.git**'
     - '**README.md'
 
@@ -25,8 +25,29 @@ jobs:
         xml-file: 'pkg_ns.xml'
         xpath: '//version'
     - name: Create Release
-      uses: ncipollo/release-action@v1
+      id: create_release
+      uses: actions/create-release@v1.0.0
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        artifacts: 'pkg_ns.zip'
-        token: ${{ secrets.GITHUB_TOKEN }}
-        tag: ${{ steps.getxml.outputs.info }}
+        tag_name: ${{ steps.getxml.outputs.info }}
+        release_name: Newsletter Subscriber ${{ steps.getxml.outputs.info }}
+        body: 'Test release body text'
+        draft: false
+        prerelease: false
+    - name: Upload Release Asset
+      id: upload-release-asset 
+      uses: actions/upload-release-asset@v1.0.1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./pkg_ns.zip
+        asset_name: pkg_ns.zip
+        asset_content_type: application/zip          
+    #- name: Create Release
+    #  uses: ncipollo/release-action@v1
+    #  with:
+    #    artifacts: 'pkg_ns.zip'
+    #    token: ${{ secrets.GITHUB_TOKEN }}
+    #    tag: ${{ steps.getxml.outputs.info }}
